# lwl-x6-keyboard

./: Cargo.toml  Makefile  README.md  rusty-kb.desktop  rusty-kb.service  setcolor.sh
.github/workflows/: main.yml
debian/: postinst
rpm/: colors.txt  keyboard-controller.spec  rusty-kb.desktop  rusty-kb.service  setcolor.sh
src/: main.rs
udev/: 99-rusty-kb.rules
