[package]
name = "lwl-x6-keyboard"
version = "0.1.0"
edition = "2024"

# --- Add these two lines ---
description = "A GTK4-based keyboard controller application"
license = "MIT" 
# ---------------------------

[dependencies]
gtk4 = "0.9"
glib = "0.20"
glob = "0.3"
gdk4 = "0.9"
crossbeam = "0.8"

[package.metadata.rpm]
package = "lwl-x6-keyboard"
files = { "rusty-kb.desktop" = { path = "/usr/share/applications/rusty-kb.desktop" }, "icon.png" = { path = "/usr/share/icons/hicolor/256x256/apps/rusty-kb.png" }, "setcolor.sh" = { path = "/usr/lib/rusty-kb/setcolor.sh", mode = "755" }, "rusty-kb.service" = { path = "/usr/lib/systemd/user/rusty-kb.service" }, "99-rusty-kb.rules" = { path = "/etc/udev/rules.d/99-rusty-kb.rules" }, "colors.txt" = { path = "/usr/lib/rusty-kb/colors.txt" } }

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
lwl-x6-keyboard = { path = "/usr/bin/lwl-x6-keyboard" }

[package.metadata.deb]
maintainer = "mrscratchcat <maintainer@localhost>"
section = "utils"
 depends = "libgtk-4-1, libglib2.0-0"
 assets = [
     ["target/release/lwl-x6-keyboard", "/usr/bin/lwl-x6-keyboard", "755"],
     ["rusty-kb.desktop", "/usr/share/applications/rusty-kb.desktop", "644"],
     ["icon.png", "/usr/share/icons/hicolor/256x256/apps/rusty-kb.png", "644"],
     ["setcolor.sh", "/usr/lib/rusty-kb/setcolor.sh", "755"],
     ["rusty-kb.service", "/usr/lib/systemd/user/rusty-kb.service", "644"],
     ["udev/99-rusty-kb.rules", "/etc/udev/rules.d/99-rusty-kb.rules", "644"],
     ["defaults/colors.txt", "/usr/lib/rusty-kb/colors.txt", "644"],
 ]
 maintainer-scripts = "debian"
